# render-engine

./: .gitignore  CMakeLists.txt
include/: camera.hpp  cube_data.hpp  entity.hpp  gaussian_background_renderer.hpp  gaussian_splat_model.hpp  mesh.hpp  model.hpp  mujoco_robot_loader.hpp  node.hpp  scene.hpp  shader.hpp  texture.hpp  window.hpp
include/glad/: glad.h
include/glm/: vec2.hpp
shaders/: multiple_tex.fs  multiple_tex.vs  texture.fs  texture.vs  tranformation.vs  triangle.fs  triangle.vs  trlc_robot.fs
shaders/gaussian/: gaussian.fs  gaussian.vs  gaussian_covariance.fs  gaussian_covariance.vs  gaussian_quad.fs  gaussian_quad.vs
src/: gaussian_background_renderer.cpp  gaussian_splat_model.cpp  glad.c  main.cpp  mesh.cpp  mujoco_robot_loader.cpp  shader.cpp  texture.cpp  window.cpp
test/: test.cpp
